# ecap-adapter-sample

./: README.md
ecap_adapter_sample/: Makefile.in  README  aclocal.m4  configure  configure.in
ecap_adapter_sample/src/: Makefile.am  Makefile.in  adapter_minimal.cc  adapter_modifying.cc  adapter_passthru.cc  autoconf.h  autoconf.h.in
